fix button to have valid html

--- a/bacs200/amuse.html
+++ b/bacs200/amuse.html
@@ -64,7 +64,7 @@
             <br>Cat Bounce was created by Tara Sinn in 2012 using Javascript. On her informational page(which can be reached through the Cat Bounce website, Tara includes
             coding resouces and organizations that cat-lovers may donate to in order to help animals. Cat Bounce also won the 2019 People's Voice Webby Award for Weirdest 
             Website.</p>
-            <a href="https://cat-bounce.com/"><button class="w3-button w3-light-grey w3-block">Go to website</button></a>
+              <a href="https://cat-bounce.com/" class="w3-button w3-light-grey w3-block">Go to Website</a>
         </div> 
 
 
@@ -81,7 +81,7 @@
                 recorded by Google Maps. There is also a gallery created by users that contains the most interesting or beautiful views found using the website.
             <br> Map Crunch was created by Nick Nicholaou who is an independent web developer who enjoys creating interesting websites. He has also worked as a full-stack developer for 
                 many years. </p>
-            <a href="https://www.mapcrunch.com/"><button class="w3-button w3-light-grey w3-block">Go to website</button></a>
+            <a href="https://www.mapcrunch.com/" class="w3-button w3-light-grey w3-block">Go to Website</a>
         </div> 
 
         <div class="w3-display-container w3-content w3-wide" style="max-width:1500px; padding-top: 30px;">
@@ -96,7 +96,7 @@
                 drawing, it displays a comparison to other users' drawings of that same object, as well as other objects that the AI detected in the user's drawing.
             <br>The developers, Jonas Jongejan, Henry Rowley, Takashi Kawashima, Jongmin Kim, and Nick Fox-Gieg, collaborated with Google developers to create the neural network. Initially,
                 they trained it with a few hundred concepts, but they plan to add more. The AI uses each user interaction to make its image detection even better.</p>
-            <a href="https://quickdraw.withgoogle.com/#"><button class="w3-button w3-light-grey w3-block">Go to website</button></a>
+            <a href="https://quickdraw.withgoogle.com/#" class="w3-button w3-light-grey w3-block">Go to Website</a>
         </div> 
         
 
