--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -62,7 +62,8 @@
         <span class="hlight">Superpower:</span> Super Strength and Agility
         <span class="hlight"><br>Weakness:</span> Ethyl Chloride
       </p>
-      <a href="https://marvel.fandom.com/wiki/Spider-Man"><button class="w3-button w3-light-grey w3-block">Learn More About Me</button></a>
+      <a href="https://marvel.fandom.com/wiki/Spider-Man" class="w3-button w3-light-grey w3-block">Learn More About Me</a>
+      
     </div>
 
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -74,7 +75,7 @@
       <p> 
           <span class="hlight">Superpower:</span> Animal-keen senses and Regenerative Abilities
           <span class="hlight"><br>Weakness:</span> Adamantium poisoning
-      <a href="https://marvel.fandom.com/wiki/Wolverine"><button class="w3-button w3-light-grey w3-block">Learn More About Me</button></a>
+      <a href="https://marvel.fandom.com/wiki/Wolverine"class="w3-button w3-light-grey w3-block">Learn More About Me</a>
     </div>
 
 
@@ -87,7 +88,7 @@
       <p> 
           <span class="hlight">Superpower:</span> God of Thunder and Lightning
           <span class="hlight"><br>Weakness:</span> No distinct physical weakness, but short-temperedness can be a flaw
-      <a href="https://marvel.fandom.com/wiki/Thor"><button class="w3-button w3-light-grey w3-block">Learn More About Me</button></a>
+      <a href="https://marvel.fandom.com/wiki/Thor" class="w3-button w3-light-grey w3-block">Learn More About Me</a>
     </div>
 
 
@@ -101,7 +102,7 @@
       <p> 
           <span class="hlight">Superpower:</span> (With Armor) Flight, Strength and Durability, Array of Weapons
           <span class="hlight"><br>Weakness:</span> Dependence on Technology
-      <a href="https://marvel.fandom.com/wiki/Iron_Man"><button class="w3-button w3-light-grey w3-block">Learn More About Me</button></a>
+      <a href="https://marvel.fandom.com/wiki/Iron_Man" class="w3-button w3-light-grey w3-block">Learn More About Me</a>
     </div>
   </div>
 
@@ -115,7 +116,7 @@
       <p> 
           <span class="hlight">Superpower:</span> Super Strength, Size and Durability
           <span class="hlight"><br>Weakness:</span> Can only use powers when in "Hulk Mode", Limited intelligence in "Hulk mode"
-      <a href="https://marvel.fandom.com/wiki/Hulk"><button class="w3-button w3-light-grey w3-block">Learn More About Me</button></a>
+      <a href="https://marvel.fandom.com/wiki/Hulk" class="w3-button w3-light-grey w3-block">Learn More About Me</a>
     </div>
   </div>
 
