--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<head>
+  <title>Project 1</title>
+</head> 
+<html lang="en">
 <h1>BACS 200 - Emma Ogle</h1>
 <p>I am learning HTML in BACS 200.</p>
 <p>I hope it starts getting fun.</p>
+</html>
