--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -94,8 +94,18 @@
         </tr>
         <tr>
             <td>Project 9</td>
-            <td><a href="https://emmagesena.github.io/bacs200/nonprofit.html">Business Blog</a></td>
-            <td><a href="https://shrinking-world.com/course/bacs200/project/09">Project 8</a></td>
+            <td><a href="https://emmagesena.github.io/bacs200/nonprofit.html">Non-Profit Website</a></td>
+            <td><a href="https://shrinking-world.com/course/bacs200/project/09">Project 9</a></td>
+        </tr>
+        <tr>
+            <td>Project 11</td>
+            <td><a href="https://emmagesena.github.io/bacs200/travel/index.html">Travel Agency</a></td>
+            <td><a href="https://shrinking-world.com/course/bacs200/project/11">Project 11</a></td>
+        </tr>
+        <tr>
+            <td>Project 12</td>
+            <td><a href="https://emmagesena.github.io/bacs200/video.html">Professional Video</a></td>
+            <td><a href="https://shrinking-world.com/course/bacs200/project/12">Project 12</a></td>
         </tr>
         
     </table>
