--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -118,6 +118,12 @@
         <a href="https://emmagesena.github.io/bacs200/video.html" class="w3-bar-item w3-button"><b>Project 12: Professional Video</b></a>
       </div>
     </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <img src="https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8d2ViJTIwZGV2ZWxvcG1lbnR8ZW58MHx8MHx8&ixlib=rb-1.2.1&w=1000&q=80" class="projimg" alt="workspace">
+        <a href="https://emmagesena.github.io/bacs200/trends/index.html" class="w3-bar-item w3-button"><b>Project 13: Trends</b></a>
+      </div>
+    </div>
     </div>
 
   <!-- About Section -->
