--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -109,7 +109,7 @@
         </tr>
         <tr>
             <td>Project 13</td>
-            <td><a href="https://emmagesena.github.io/bacs200/trends/index.html">Professional Video</a></td>
+            <td><a href="https://emmagesena.github.io/bacs200/trends/index.html">Trends in Web Development</a></td>
             <td><a href="https://shrinking-world.com/course/bacs200/project/13">Project 13</a></td>
         </tr>
         
